--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@t3-oss/env-nextjs": "^0.11.1",
     "@ai-sdk/openai": "^1.0.7",
     "@supabase/ssr": "^0.5.2",
-    "@upstash/redis": "^1.34.3",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@upstash/ratelimit": "^2.0.4",
+    "@upstash/redis": "^1.34.3",
     "agent-twitter-client": "^0.0.14",
     "ai": "^4.0.12",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.2.14",
     "flowise-sdk": "^1.0.9",
+    "framer-motion": "^11.2.14",
+    "lucide-react": "^0.474.0",
     "next": "^14.2.20",
     "next-nprogress-bar": "^2.4.3",
     "react": "^18",
@@ -30,8 +31,8 @@
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.0",
     "usehooks-ts": "^3.1.0",
-    "zustand": "^5.0.3",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
